--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "illuminate/database": "^5.5",
         "b2b/factory": "^1.0"
     },
+    "suggest": {
+        "myclabs/php-enum": "Use for enums casting."
+    },
     "autoload": {
         "psr-4": {
             "B2B\\Eloquent\\TypeCasting\\": "src/"
